<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/config_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:animateLayoutChanges="true"
        android:alpha="0"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:alpha="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/device_name_size"
                android:textAlignment="center"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/preset_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/preset_name_size"
                android:textAlignment="center"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/preset"/>

        </LinearLayout>

        <TextView
            android:id="@+id/message_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.5"
            android:textSize="@dimen/message_size"
            android:textAlignment="center"
            android:text=""/>

        <FrameLayout
            android:id="@+id/markers_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/trash_bin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/trash_bin_margin"
            android:layout_marginEnd="@dimen/trash_bin_margin"
            android:src="@drawable/ic_baseline_delete_24"
            android:tooltipText="@string/remove_key_binding"
            app:backgroundTint="@color/red" />

    </FrameLayout>

</FrameLayout>